# tomcab

./: README.md  package.toml  stack.yaml  tomcab.cabal
.github/workflows/: ci.yml
exe/: Cabal.hs  Main.hs  Stack.hs  Wrapper.hs
src/: Tomcab.hs
src/Tomcab/: Cabal.hs  Render.hs  Resolve.hs
src/Tomcab/Cabal/: Module.hs
src/Tomcab/Resolve/: Phases.hs
src/Tomcab/Utils/: FilePath.hs  TOML.hs
test/: Main.hs
test/Tomcab/: CabalTest.hs  ResolveTest.hs
