cabal-version: 1.12

name: tomcab
version: 0.1.0
build-type: Simple
description: Generate Cabal files from TOML files. See README.md for more details.
synopsis: Generate Cabal files from TOML files

library
  exposed-modules:
      Tomcab
    , Tomcab.Cabal
    , Tomcab.Cabal.Module
    , Tomcab.Render
    , Tomcab.Resolve
    , Tomcab.Resolve.Phases
    , Tomcab.Utils.FilePath
  hs-source-dirs:
      src
  build-depends:
      base >= 4.14 && < 5
    , containers >= 0.5.8 && < 1
    , directory >= 1.2.5.0 && < 2
    , filepath < 2
    , text >= 1 && < 3
    , toml-reader < 1
    , unliftio < 1
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"

executable tomcab
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"
  main-is: Main.hs

executable stack-tomcab
  other-modules:
      Wrapper
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , process < 2
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"
  main-is: Stack.hs

  if !os(windows)
    build-depends:
        unix < 3

executable cabal-tomcab
  other-modules:
      Wrapper
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , process < 2
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"
  main-is: Cabal.hs

  if !os(windows)
    build-depends:
        unix < 3
