cabal-version: 1.12

name: tomcab
version: 0.1.0
build-type: Simple
description: Generate Cabal files from TOML files. See README.md for more details.
synopsis: Generate Cabal files from TOML files

library
  exposed-modules:
      Tomcab
    , Tomcab.Cabal
    , Tomcab.Cabal.Module
    , Tomcab.Render
    , Tomcab.Resolve
    , Tomcab.Resolve.Phases
    , Tomcab.Utils.FilePath
    , Tomcab.Utils.TOML
  hs-source-dirs:
      src
  build-depends:
      base >= 4.14 && < 5
    , containers >= 0.5.8 && < 1
    , directory >= 1.2.5.0 && < 2
    , filepath < 2
    , text >= 1 && < 3
    , toml-reader < 1
    , unliftio < 1
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"

executable tomcab
  main-is: Main.hs
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"

executable stack-tomcab
  main-is: Stack.hs
  other-modules:
      Wrapper
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , process < 2
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"

  if !os(windows)
    build-depends:
        unix < 3

executable cabal-tomcab
  main-is: Cabal.hs
  other-modules:
      Wrapper
  hs-source-dirs:
      exe
  build-depends:
      base >= 4.14 && < 5
    , process < 2
    , tomcab
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"

  if !os(windows)
    build-depends:
        unix < 3

test-suite tomcab-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Tomcab.CabalTest
  hs-source-dirs:
      test
  build-depends:
      base
    , containers
    , tasty
    , tasty-autocollect
    , tasty-hunit
    , text
    , tomcab
    , toml-reader
    , unliftio
  build-tool-depends:
      tasty-autocollect:tasty-autocollect
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  ghc-options:
      "-Wall"
      "-F"
      "-pgmF=tasty-autocollect"
